--- a/tutorials/Class Activation Maps for Object Detection With Faster RCNN.ipynb
+++ b/tutorials/Class Activation Maps for Object Detection With Faster RCNN.ipynb
@@ -389,6 +389,8 @@
    ],
    "source": [
     "def renormalize_cam_in_bounding_boxes(boxes, image_float_np, grayscale_cam):\n",
+    "    \"\"\"Normalize the CAM to be in the range [0, 1] \n",
+    "    inside every bounding boxes, and zero outside of the bounding boxes. \"\"\"\n",
     "    renormalized_cam = np.zeros(grayscale_cam.shape, dtype=np.float32)\n",
     "    for x1, y1, x2, y2 in boxes:\n",
     "        renormalized_cam[y1:y2, x1:x2] = scale_cam_image(grayscale_cam[y1:y2, x1:x2].copy())    \n",
