typo in tutorial

--- a/tutorials/Deep Feature Factorizations.ipynb
+++ b/tutorials/Deep Feature Factorizations.ipynb
@@ -71,7 +71,7 @@
     "And some of the pixels could get high values in several heatmaps, for example different categories of cats.\n",
     "This is a lot of information to unpack and not very effecient.\n",
     "\n",
-    "Could we think of a way to create just one visualization that summerizes what the model does for an image ?\n",
+    "Could we think of a way to create just one visualization that summarizes what the model does for an image ?\n",
     "\n",
     "## Deep Feature Factorization For Concept Discovery\n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "- H (after reshaping it back to 2D activations) contains how the pixels corresponds with the different concepts.\n",
     "\n",
-    "If we input a batch of several images, concepts that repeat accross the images will be computed.\n",
+    "If we input a batch of several images, concepts that repeat across the images will be computed.\n",
     "This gives us a way of automatically discovering concepts in a dataset, and performing tasks like co-localization, further detailed in the paper.\n",
     "\n",
     "However for our purposes now we will use a batch size of 1: we just want to detect the concepts detected in a single image.\n",
@@ -122,10 +122,10 @@
     "But we have a problem - the same pixel can have non zero values from different concepts.\n",
     "The strategy we will use here will be just to keep the concept that got a higher value in the normalized heatmap, meaning it's more important for it.\n",
     "\n",
-    "For every concept we will also show a legend with informative properties of these concepts: the categories that they score highest for.\n",
+    "For every concept we will also show a legend with informative properties of that concept: the categories that they score highest for.\n",
     "\n",
     "\n",
-    "To get started, lets load are model, and prepare input tensors."
+    "To get started, let's load our model, and prepare input tensors."
    ]
   },
   {
